--- a/app/src/main/res/layout/activity_insight.xml
+++ b/app/src/main/res/layout/activity_insight.xml
@@ -26,7 +26,7 @@
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Savings Plan"
+            android:text="Budgets and Goals"
             tools:layout_editor_absoluteX="166dp"
             tools:layout_editor_absoluteY="10dp" />
 
