--- a/app/src/main/res/layout/expense_add_card.xml
+++ b/app/src/main/res/layout/expense_add_card.xml
@@ -42,11 +42,12 @@
             android:layout_height="wrap_content"/>
 
         <Spinner
+            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/spinnerExpense"
             android:entries="@array/category"
-            android:layout_marginBottom="5dp"/>
+            android:layout_marginBottom="10dp"/>
 
 
         <EditText
@@ -57,13 +58,19 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
+        <Spinner
+            android:layout_marginTop="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/spinnerAccount"
+            android:layout_marginBottom="10dp"/>
+
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Date"
             android:textSize="18sp"
-            android:textStyle="bold"
             android:layout_margin="5dp"/>
         <Button
             android:layout_width="match_parent"
