--- a/app/src/main/res/layout/fragment_dash_board.xml
+++ b/app/src/main/res/layout/fragment_dash_board.xml
@@ -72,7 +72,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="000.00"
-                        android:textColor="@color/black" />
+                        android:textColor="@color/red" />
 
                 </RelativeLayout>
 
@@ -87,7 +87,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="000.00"
-                        android:textColor="@color/black" />
+                        android:textColor="@color/green" />
 
                 </RelativeLayout>
 
