--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,10 +4,11 @@
     <color name="white">#FFFFFFFF</color>
     <color name="red">#FF0000</color>
     <color name="blue">#FF2196F3</color>
+    <color name="green">#FF4CAF50</color>
 
     <color name="dashboard_color">#FF3F51B5</color>
     <color name="account_color">#FF5722</color>
     <color name="budget_color">#FF9800</color>
     <color name="saving_color">#FFEB3B</color>
-    <color name="profile_color">#8BC34A</color>
+    <color name="profile_color">#4CAF50</color>
 </resources>
