--- a/app/src/main/res/layout/activity_budget.xml
+++ b/app/src/main/res/layout/activity_budget.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:backgroundTint="#FFFFFF"
     tools:context=".budgetActivity">
 
     <androidx.cardview.widget.CardView
@@ -38,7 +39,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="6dp"
                 android:background="#FFFFFF"
-                android:backgroundTint="#141326"
+                android:backgroundTint="#FFFFFF"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
@@ -48,7 +49,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="126dp"
-                android:backgroundTint="#141326"
+                android:backgroundTint="#FFFFFF"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.962"
                 app:layout_constraintStart_toEndOf="@+id/textView12"
@@ -98,6 +99,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:ems="10"
+                android:hint="Amount"
                 android:inputType="text"
                 android:textColor="#000000"
                 app:layout_constraintEnd_toEndOf="parent"
