--- a/app/src/main/res/layout/fragment_budget.xml
+++ b/app/src/main/res/layout/fragment_budget.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/budgetFragment"
     android:layout_width="400dp"
-    android:layout_height="match_parent"
-    tools:context=".budgetFragment">
+    android:layout_height="match_parent">
 
     <androidx.cardview.widget.CardView
         android:layout_width="0dp"
@@ -64,7 +63,7 @@
                 android:layout_marginTop="16dp"
                 android:ems="10"
                 android:inputType="text"
-                android:textColor="#FFFFFF"
+                android:textColor="#020202"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.075"
                 app:layout_constraintStart_toStartOf="parent"
