--- a/app/src/main/res/layout/activity_insight.xml
+++ b/app/src/main/res/layout/activity_insight.xml
@@ -5,9 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".insight">
-    <include layout="@layout/appbar_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tab_layout_Home"
@@ -18,8 +15,6 @@
         app:layout_constraintHorizontal_bias="0.629"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
-
-
 
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
@@ -67,6 +62,6 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:menu="@menu/nav_bar"
-        />
+        tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
