--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -8,12 +8,12 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="372dp">
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/accountRecyclerView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/accountRecyclerView"/>
+            android:layout_height="wrap_content" />
     </ScrollView>
 
     <Button
