--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -17,10 +17,11 @@
             android:background="@color/cardview_shadow_start_color">
 
             <ImageView
+                android:id="@+id/profilePic"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:layout_centerInParent="true"
-                android:background="@drawable/baseline_person_2_24"/>
+                android:background="@drawable/baseline_person_2_24" />
 
         </RelativeLayout>
 
