--- a/app/src/main/res/layout/list_item_wallet.xml
+++ b/app/src/main/res/layout/list_item_wallet.xml
@@ -10,67 +10,102 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="16dp">
+            android:orientation="horizontal">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="Account"
-                android:id="@+id/accountName"/>
+            <LinearLayout
+                android:layout_width="170dp"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="16dp">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="1234567890"
-                android:id="@+id/accountNum"/>
+                <TextView
+                    android:id="@+id/accountName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="Account" />
+
+                <TextView
+                    android:id="@+id/accountNum"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="1234567890" />
 
 
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
-            android:orientation="vertical"
-            android:padding="16dp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="Available Balance:" />
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:layout_marginLeft="30dp"
+                android:orientation="vertical"
+                android:padding="16dp">
 
                 <TextView
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="RM" />
+                    android:layout_height="match_parent"
+                    android:text="Available Balance:" />
 
-                <TextView
-                    android:id="@+id/balance"
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:paddingLeft="10dp"
-                    android:text="0" />
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="RM" />
+
+                    <TextView
+                        android:id="@+id/balance"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingLeft="10dp"
+                        android:text="0" />
+                </LinearLayout>
+
+
+
+
             </LinearLayout>
-
 
         </LinearLayout>
 
+        <LinearLayout
+            android:id="@+id/buttonsLayoutAccount"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="16dp"
+            android:visibility="gone"
+            android:gravity="center">
 
+            <Button
+                android:id="@+id/buttonEditAccount"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:text="Edit"
+                android:backgroundTint="@color/blue"
+                android:onClick="onButtonClick"
+                android:layout_marginRight="20dp"/>
 
+            <Button
+                android:id="@+id/buttonDeleteAccount"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:text="Delete"
+                android:backgroundTint="@color/red"
+                android:onClick="onButtonClick"
+                android:layout_marginLeft="20dp"/>
+        </LinearLayout>
 
     </LinearLayout>
+
+
 
 
 
