--- a/app/src/main/res/layout/addsaveddialog.xml
+++ b/app/src/main/res/layout/addsaveddialog.xml
@@ -22,7 +22,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.049"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imageButton2" />
+                app:layout_constraintTop_toBottomOf="@+id/backBtn2" />
 
             <EditText
                 android:id="@+id/editSavedAmt"
@@ -49,7 +49,7 @@
                 app:layout_constraintVertical_bias="1.0" />
 
             <ImageButton
-                android:id="@+id/imageButton2"
+                android:id="@+id/backBtn2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
